# mlp

./: .gitignore  Cargo.toml  README.md  pixi.toml
.github/workflows/: rust.yaml
misc/: Manifest.toml  Project.toml  input_simulated-20260303230539.tsv  output_network-20260303230557.json  test.jl
src/: activations.rs  activaton.rs  backward.rs  costs.rs  forward.rs  io.rs  linalg.rs  main.rs  network.rs  neuron.rs  optimisers.rs  train.rs
src/linalg/: abs.rs  add.rs  clamp.rs  fold.rs  matrix.rs  mult.rs  sqrt.rs
