[package]
name = "mlp"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.55", features = ["derive"] }
cudarc = { version = "0.18.1", features = ["cuda-12080"]}
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.11"
ruviz = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
